--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container" id="root">
         <div class="row">
-            <div class="col-12 p-5" id="root">
+            <div class="col-12 p-5">
                 <h1> {{ message }} </h1>
             </div>
         </div>
